# scribe_frame

./: .gitignore  README.md  pyproject.toml
docs/: PLUGINS.md
examples/: demo.py  gui_demo.py
src/scribe_frame/: __init__.py  chunker_registry.py  command_registry.py  formatter_registry.py  interfaces.py  provider_registry.py
src/scribe_frame/cli/: __init__.py  main.py
src/scribe_frame/ui/: __init__.py  inspector.py  theme.py  widgets.py
